fix progressbar broken on chrome

--- a/assets/less/a2-components/dashboard.less
+++ b/assets/less/a2-components/dashboard.less
@@ -20,24 +20,26 @@
     }
     
     li:first-child {
-        border-left: 1px solid;
+        border-right: 0px none;
         border-color: transparent;
         border-radius: 5px 0px 0px 5px;
+        // margin-right: -3px;
     }
     li:last-child {
         border-radius: 0px 5px 5px 0px;
+        border-right: 1px solid transparent;
+        
     }
     
     li {
+        box-sizing:content-box;
         display:inline-block;
-        border-top: 1px solid;
-        border-bottom: 1px solid;
-        border-right: 1px solid;
-        margin-top: px;
-        margin-left: -2px;
-        margin-right: -2px;
-        padding: 5px;
-        border-color: transparent;
+        border-left: 1px solid transparent;
+        border-top: 1px solid transparent;
+        border-bottom: 1px solid transparent;
+        margin-left: 0px;
+        margin-right: -4px;
+        // padding: 5px;
         width: 30px;
         height: 20px;
         vertical-align: middle;
